<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/navigation_home"
        android:icon="@drawable/ic_home_black_24dp"
        android:title="@string/title_home" />

    <item
        android:id="@+id/navigation_rewards"
        android:icon="@drawable/ic_challenge_checkpoint_filled"
        android:title="@string/title_rewards" />

    <item
        android:id="@+id/smartVisionActivity"
        android:icon="@android:drawable/ic_menu_camera"
        android:title="@string/title_activity_smart_vision" />
    <item
        android:id="@+id/navigation_learning"
        android:icon="@drawable/ic_info"
        android:title="@string/title_learning" />
    <item
        android:id="@+id/navigation_you"
        android:icon="@drawable/ic_action_you"
        android:title="@string/title_you" />

</menu>
