<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@drawable/gradient_backgrounds_red_yellow_vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.50" />

    <TextView
        android:id="@+id/transportation_fragment_text_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:fontFamily="@font/quicksand_bold"
        android:gravity="center"
        android:text="@string/fragment_transportation_question"
        android:textAppearance="@style/TitleAppearance"
        android:textColor="#ffffff"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/guideline4" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/transportation_fragment_bus_button"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:text="@string/fragment_transportation_bus"
        android:textColor="@color/colorPrimary_red"
        android:background="@drawable/customborder"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="@+id/guideline5"
        app:layout_constraintTop_toBottomOf="@+id/transportation_fragment_text_view" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/transportation_fragment_car_button"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:text="@string/fragment_transportation_car"
        android:textColor="@color/colorPrimary_red"
        android:background="@drawable/customborder"
        app:layout_constraintEnd_toStartOf="@+id/guideline5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/transportation_fragment_text_view" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/transportation_fragment_train_button"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:text="@string/fragment_transportation_train"
        android:textColor="@color/colorPrimary_red"
        android:background="@drawable/customborder"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="@+id/guideline5"
        app:layout_constraintTop_toBottomOf="@+id/transportation_fragment_bus_button" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/transportation_fragment_bicycle_button"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:text="@string/fragment_transportation_bicycle"
        android:textColor="@color/colorPrimary_red"
        android:background="@drawable/customborder"
        app:layout_constraintEnd_toStartOf="@+id/guideline5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/transportation_fragment_car_button" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.50" />

    <androidx.cardview.widget.CardView
            android:layout_width="180dp"
            android:layout_height="180dp"
            app:cardCornerRadius="90dp"
            app:layout_constraintBottom_toTopOf="@+id/guideline4"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:id="@+id/transportation_imageView"
            android:layout_width="180dp"
            android:layout_height="180dp" />
    </androidx.cardview.widget.CardView>
</androidx.constraintlayout.widget.ConstraintLayout>