<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@drawable/gradient_backgrounds_red_blue"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    >

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.50" />

    <TextView
        android:id="@+id/fragment_diet_question"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
            android:textColor="#ffffff"
        android:text="@string/fragment_diet_question"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/guideline3" />

    <Button
        android:id="@+id/fragment_diet_yes_button"
        android:layout_width="120dp"
        android:layout_height="wrap_content"
        android:background="@drawable/customborder"
        android:layout_marginTop="30dp"
        android:text="@string/button_yes"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/fragment_diet_question" />

    <Button
        android:id="@+id/fragment_diet_no_button"
        android:layout_width="120dp"
        android:layout_height="wrap_content"
        android:background="@drawable/customborder"
        android:layout_marginTop="30dp"
        android:text="@string/button_no"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/fragment_diet_yes_button" />

    <androidx.cardview.widget.CardView
            android:layout_width="180dp"
            android:layout_height="180dp"
            app:cardCornerRadius="90dp"
            app:layout_constraintBottom_toTopOf="@+id/fragment_diet_question"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />
</androidx.constraintlayout.widget.ConstraintLayout>