<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:background="@drawable/gradient_backgrounds_green_yellow"
    android:layout_width="match_parent"
    android:layout_height="match_parent"


    >

    <android.support.constraint.Guideline android:layout_width="wrap_content" android:layout_height="wrap_content"
                                          android:id="@+id/guideline2"
                                          android:orientation="horizontal"
                                          app:layout_constraintGuide_percent="0.50"/>
    <TextView
            android:text="@string/fragment_living_style_question"
            android:textSize="24sp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/living_style_fragment_question"
            app:layout_constraintTop_toTopOf="@+id/guideline2" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="8dp" app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="8dp"/>
    <Button
            android:text="@string/button_yes"
            android:layout_width="120dp"
            android:layout_height="wrap_content"
            android:background="@drawable/customborder"
            android:id="@+id/living_style_fragment_yes_button"
            app:layout_constraintTop_toBottomOf="@+id/living_style_fragment_question"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginTop="30dp"
    />
    <Button
            android:text="@string/button_no"
            android:layout_width="120dp"
            android:layout_height="wrap_content"
            android:background="@drawable/customborder"
            android:id="@+id/living_style_fragment_no_button"
            android:layout_marginTop="30dp" app:layout_constraintTop_toBottomOf="@+id/living_style_fragment_yes_button"
            app:layout_constraintStart_toStartOf="parent" android:layout_marginStart="8dp"
            app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="8dp"/>

    <android.support.v7.widget.CardView
            android:layout_width="180dp"
            android:layout_height="180dp"
            app:cardCornerRadius="90dp"
            app:layout_constraintBottom_toTopOf="@+id/living_style_fragment_question"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />
</android.support.constraint.ConstraintLayout>