<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/gradient_backgrounds_green_blue_vertical"
    tools:context=".YouMayStartActivity">

    <androidx.cardview.widget.CardView
        android:layout_width="180dp"
        android:layout_height="180dp"
        app:cardCornerRadius="90dp"
        app:layout_constraintBottom_toTopOf="@+id/you_may_start_middle_guideline"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        >
        <ImageView
            android:layout_width="180dp"
            android:layout_height="180dp"
            android:src="@drawable/youresetplant"
            />
    </androidx.cardview.widget.CardView>

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/you_may_start_proceed_button"
        android:layout_width="120dp"
        android:layout_height="wrap_content"
        android:text="@string/you_may_start_start_button"
        android:textColor="@color/colorPrimary_blue"
        android:background="@drawable/customborder"
        app:layout_constraintBottom_toTopOf="@id/you_may_start_instructions_tv"
        app:layout_constraintTop_toBottomOf="@id/you_may_start_all_set_tw"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        />

    <TextView
        android:id="@+id/you_may_start_all_set_tw"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/you_may_start_youre_set"
        android:textColor="#ffffff"
        android:textSize="24dp"
        app:layout_constraintTop_toBottomOf="@id/you_may_start_middle_guideline"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/you_may_start_middle_guideline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.60" />

    <TextView
        android:id="@+id/you_may_start_instructions_tv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/you_may_start_settings_instructions"
        android:gravity="center"
        app:layout_constraintBottom_toTopOf="@id/you_may_start_bottom_guideline"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"

        />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/you_may_start_bottom_guideline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.90" />

</androidx.constraintlayout.widget.ConstraintLayout>